--- a/src/assets/scss/add-inventory.scss
+++ b/src/assets/scss/add-inventory.scss
@@ -194,7 +194,7 @@
 
 .part-sec{
     display: flex;
-    // align-items: flex-start;
+    align-items: center;
     margin-bottom: 0px;
     @media (max-width:700px){
         flex-direction: column;
