--- a/src/assets/scss/add-inventory.scss
+++ b/src/assets/scss/add-inventory.scss
@@ -254,6 +254,8 @@
       
     }
     .add-btn-wrp{
+        margin: 0 0 15px 0;
+        padding: 0;
         @media (max-width:700px){
             width: 100%;
             margin-left: 0px;
