--- a/src/assets/scss/modal.scss
+++ b/src/assets/scss/modal.scss
@@ -6,7 +6,7 @@
             width: 29px;
             height: 29px;
             border-radius: 29px;
-            background-image: url(../images/modal-close-btn.svg);
+            background-image: url(../img/modal-close-btn.svg);
             background-repeat: no-repeat;
             background-position: center;
             background-color: #F2F5FA;
@@ -17,7 +17,6 @@
             right: 30px;
             box-shadow: none;
             outline: none;
-            z-index: 3;
         }
     }
     .modal-body{
@@ -94,7 +93,6 @@
                     align-items: center;
                     justify-content: center;
                     border-radius: 15px;
-                    position: relative;
                     .txt{
                         color: #B3C6DD;
                         font-weight: 600;
@@ -119,13 +117,6 @@
                         color: #676767;
                 
                     }
-                    .error{
-                        bottom: -20px;
-                        margin-bottom: 0;
-                    }
-                }
-                .uploaded-files-list{
-                    padding-top: 20px;
                 }
                 .download-btn{
                     width: 236px;
@@ -421,9 +412,7 @@
         box-shadow: none;
         font-weight: 400;
         font-size: 16px;
-        &:not(:disabled){
-            background-color:#F7FBFF;
-        }
+        background-color:#F7FBFF;
     
         &::placeholder{
             color: #8897AD; 
@@ -442,17 +431,6 @@
             height: 45px;
         }
     
-    }
-    &.edit-profile-modal{
-        .modal-dialog{
-            .modal-content{
-                .modal-body{
-                    .set-dealine-wrp{
-                        margin: 0;
-                    }
-                }
-            }
-        }
     }
 }
 
@@ -1048,7 +1026,7 @@
 .prompt-modal{
     .modal-dialog{
         max-width: 640px;
-        @media($sm-1679){
+        @media($sm-1199){
             max-width: 500px;
         }
         @media($sm-579){
@@ -1092,10 +1070,13 @@
                 padding: 21px 86px 0;
                 min-height: 130px;
                 @media ($sm-1679){
-                    padding: 21px 40px 0;
+                    padding: 21px 60px 0;
+                }
+                @media ($sm-1441){
+                    padding: 21px 50px 0;
                 }
                 @media ($sm-1199){
-                    padding: 20px 35px 0;
+                    padding: 20px 40px 0;
                 }
                 @media ($sm-991){
                     padding: 20px 30px 0;
