--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -274,3 +274,11 @@ a{
         }
     }
 }
+
+.dash-table-wrp{
+    .no-data {
+        .no-data-content{
+            max-width: 130px;
+        }
+    }
+}
