--- a/src/assets/scss/dashboard.scss
+++ b/src/assets/scss/dashboard.scss
@@ -19,10 +19,10 @@
             width: calc(100% - 280px);
             margin-left: 280px;
         }
-        @media($sm-1481){
-            width: calc(100% - 250px);
-            margin-left: 250px;
-        }
+        // @media($sm-1481){
+        //     width: calc(100% - 250px);
+        //     margin-left: 250px;
+        // }
         @media($sm-1199){
             width: calc(100% - 180px);
             margin-left: 180px;
