--- a/src/assets/scss/sidebar.scss
+++ b/src/assets/scss/sidebar.scss
@@ -20,11 +20,11 @@
         max-width: 280px;
         flex: 0 0 280px;
     }
-    @media ($sm-1481){
-        width: 250px;
-        max-width: 250px;
-        flex: 0 0 250px;
-    }
+    // @media ($sm-1481){
+    //     width: 250px;
+    //     max-width: 250px;
+    //     flex: 0 0 250px;
+    // }
     .close-nav{
         position: absolute;
         right: -83px !important;
@@ -36,34 +36,6 @@
             &.logo-collapse{
                 display: none;
             }
-        }
-    }
-    &.collapsed {
-        width: 80px;
-        max-width: 80px;
-        flex: 0 0 80px;
-        .logo{
-            height: 48px;
-            img {
-                width: 50px;
-                &.logo-collapse{
-                    display: block;
-                    height: 48px;
-                }
-                &:not(.logo-collapse){
-                    display: none;
-                }
-            }
-        }
-        .txt {
-            display: none;
-        }
-
-        .open-nav{
-            display: none;
-        }
-        .close-nav{
-            display: block;
         }
     }
 
@@ -113,7 +85,21 @@
             }
         }
     }
-
+    .menu-wrp-outer{
+        overflow-y: auto;
+        height: calc(100vh - 140px);
+            &::-webkit-scrollbar {
+                width: 4px;
+                height: 4px;
+            }
+            &::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 4px #D9D9D9;
+            }
+            &::-webkit-scrollbar-thumb {
+            background-color: #77c5eb !important;
+            outline: 1px solid #fff1f1;
+            }
+    }
     .nav {
         flex-direction: column;
         .nav-link {
@@ -154,6 +140,68 @@
             &.active,
             &:hover{
                 background: linear-gradient(90deg, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 100%);
+            }
+            &.is-sub-menu{
+                position: relative;
+                &::after{
+                content: "";
+                display: inline-block;
+                background: url(../images/chevron-down-arrow.svg) no-repeat center;
+                background-size: contain;
+                filter: brightness(0) invert(1) hue-rotate(68deg);
+                width: 12px;
+                height: 10px;
+                margin-left: 10px;
+                }
+                &.open{
+                    transform: rotate(180deg);
+                }
+            }
+        }
+        .sub-menu{
+            margin-left: 10px;
+            .nav-link{
+                padding-right: 0px;
+                .icon{
+                    width: 14px;
+                    height: 14px;
+                    margin-right: 10px;
+                }
+            }
+        }
+    }
+    &.collapsed {
+        width: 80px;
+        max-width: 80px;
+        flex: 0 0 80px;
+        .logo{
+            height: 48px;
+            img {
+                width: 50px;
+                &.logo-collapse{
+                    display: block;
+                    height: 48px;
+                }
+                &:not(.logo-collapse){
+                    display: none;
+                }
+            }
+        }
+        .txt {
+            display: none;
+        }
+
+        .open-nav{
+            display: none;
+        }
+        .close-nav{
+            display: block;
+        }
+        .nav-link{
+            .icon{
+                width: 14px;
+                height: 14px;
+                margin-right: 0px;
             }
         }
     }
