--- a/src/assets/scss/sidebar.scss
+++ b/src/assets/scss/sidebar.scss
@@ -155,7 +155,9 @@
                 margin-left: 10px;
                 }
                 &.open{
+                    &::after{
                     transform: rotate(180deg);
+                    }
                 }
             }
         }
