--- a/src/assets/scss/messages.scss
+++ b/src/assets/scss/messages.scss
@@ -87,6 +87,9 @@
                     object-fit: contain;
                 }
             }
+            .table-header-wrap{
+                padding-left: 0px;
+            }
         }
         .msg-listing-wrap {
             padding: 10px 24px 0 24px;
