--- a/src/assets/scss/sidebar.scss
+++ b/src/assets/scss/sidebar.scss
@@ -45,13 +45,10 @@
         align-items: center;
         margin-bottom: 46px;
         @media ($sm-1679){
-            margin-bottom: 40px;
-        }
-        @media ($sm-1441){
-            margin-bottom: 35px;
+            margin-bottom: 25px;
         }
         @media ($sm-1199){
-            margin-bottom: 30px;
+            margin-bottom: 20px;
         }
         .logo {
             max-width: 205px;
@@ -86,18 +83,20 @@
         }
     }
     .menu-wrp-outer{
-        overflow-y: auto;
-        height: calc(100vh - 140px);
-            &::-webkit-scrollbar {
-                width: 4px;
-                height: 4px;
-            }
-            &::-webkit-scrollbar-track {
-            box-shadow: inset 0 0 4px #D9D9D9;
-            }
-            &::-webkit-scrollbar-thumb {
-            background-color: #77c5eb !important;
-            outline: 1px solid #fff1f1;
+        height: calc(100vh - 128px);
+            &:hover{
+                overflow-y: auto;
+                &::-webkit-scrollbar {
+                    width: 4px;
+                    height: 4px;
+                }
+                &::-webkit-scrollbar-track {
+                box-shadow: inset 0 0 4px #D9D9D9;
+                }
+                &::-webkit-scrollbar-thumb {
+                background-color: #77c5eb !important;
+                outline: 1px solid #fff1f1;
+                }
             }
     }
     .nav {
