--- a/src/assets/scss/usermanagement.scss
+++ b/src/assets/scss/usermanagement.scss
@@ -613,6 +613,7 @@
         border-radius: 20px;
         overflow: hidden;
         overflow-x: auto;
+        overflow-y: auto;
         height: 100%;
         table {
             width: 100%;
