--- a/src/assets/scss/forms.scss
+++ b/src/assets/scss/forms.scss
@@ -174,6 +174,8 @@
         // flex-wrap: nowrap;
         flex-wrap: wrap;
         padding:5px 8px 5px 15px;
+        overflow-y: auto;
+        height: 40px;
   
         .react-select__multi-value {
         }
