--- a/src/assets/scss/forms.scss
+++ b/src/assets/scss/forms.scss
@@ -190,7 +190,7 @@
   
       // react multi select
       .react-select__multi-value {
-        background-color: #d9d9d9;
+        background-color: #d7eaf3;
         border-radius: 10px;
       }
       .react-select__multi-value__label {
