--- a/src/assets/scss/messages.scss
+++ b/src/assets/scss/messages.scss
@@ -177,6 +177,78 @@
                             }
                         }
                     }
+
+
+
+
+                    .alphabet{
+                        background-color: #d8e1ed;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        width: 48px;
+                        height: 48px;
+                        flex: 0 0 48px; margin: 0; border-radius: 100%; 
+                        @media ($sm-1679) {
+                            width: 44px;
+                            height: 44px;
+                            flex: 0 0 44px;
+                        }
+                        @media ($sm-1441) {
+                            width: 40px;
+                            height: 40px;
+                            flex: 0 0 40px;
+                        }
+                        @media ($sm-1199) {
+                            width: 38px;
+                            height: 38px;
+                            flex: 0 0 38px;
+                        }
+                        @media ($sm-991) {
+                            width: 36px;
+                            height: 36px;
+                            flex: 0 0 36px;
+                        }
+                        @media ($sm-767) {
+                            width: 32px;
+                            height: 32px;
+                            flex: 0 0 32px;
+                        }
+                        span{
+                            color:#fff;
+                            font-size: 14px; 
+                            font-weight: 500;
+                            line-height: 1;
+                            @media ($sm-991) {font-size: 12px;}
+                        }
+                        &.blue {
+                            background-color: #87CEFA; // LightSkyBlue
+                          }
+                          &.green {
+                            background-color: #90EE90; // LightGreen
+                          }
+                          &.pink {
+                            background-color: #FFB6C1; // LightPink
+                          }
+                          &.purple {
+                            background-color: #DDA0DD; // Plum
+                          }
+                          &.orange {
+                            background-color: #FFA07A; // LightSalmon
+                          }
+                          &.yellow {
+                            background-color: #FFD700; // Gold
+                          }
+                          &.teal {
+                            background-color: #00CED1; // DarkTurquoise
+                          }
+                          &.coral {
+                            background-color: #FF7F50; // Coral
+                          }
+                    }
+
+
+
                     .name-msg-wrap {
                         display: flex;
                         flex-direction: column;
@@ -265,6 +337,71 @@
                     width: 100%;
                     height: 100%;
                 }
+            }
+            .alphabet{
+                background-color: #d8e1ed;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 48px;
+                height: 48px;
+                flex: 0 0 48px; margin: 0; border-radius: 100%; 
+                @media ($sm-1679) {
+                    width: 44px;
+                    height: 44px;
+                    flex: 0 0 44px;
+                }
+                @media ($sm-1441) {
+                    width: 40px;
+                    height: 40px;
+                    flex: 0 0 40px;
+                }
+                @media ($sm-1199) {
+                    width: 38px;
+                    height: 38px;
+                    flex: 0 0 38px;
+                }
+                @media ($sm-991) {
+                    width: 36px;
+                    height: 36px;
+                    flex: 0 0 36px;
+                }
+                @media ($sm-767) {
+                    width: 32px;
+                    height: 32px;
+                    flex: 0 0 32px;
+                }
+                span{
+                    color:#fff;
+                    font-size: 14px; 
+                    font-weight: 500;
+                    line-height: 1;
+                    @media ($sm-991) {font-size: 12px;}
+                }
+                &.blue {
+                    background-color: #87CEFA; // LightSkyBlue
+                  }
+                  &.green {
+                    background-color: #90EE90; // LightGreen
+                  }
+                  &.pink {
+                    background-color: #FFB6C1; // LightPink
+                  }
+                  &.purple {
+                    background-color: #DDA0DD; // Plum
+                  }
+                  &.orange {
+                    background-color: #FFA07A; // LightSalmon
+                  }
+                  &.yellow {
+                    background-color: #FFD700; // Gold
+                  }
+                  &.teal {
+                    background-color: #00CED1; // DarkTurquoise
+                  }
+                  &.coral {
+                    background-color: #FF7F50; // Coral
+                  }
             }
             .name-status-wrap {
                 display: flex;
