--- a/src/assets/scss/modal.scss
+++ b/src/assets/scss/modal.scss
@@ -1359,12 +1359,83 @@
                                 object-fit: cover;
                                 border-radius: 12px;
                             }
+
+
+
+                            .alphabet{
+                                background-color: #d8e1ed;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                width: 48px;
+                                height: 48px;
+                                flex: 0 0 48px; margin: 0; border-radius: 100%; 
+                                @media ($sm-1679) {
+                                    width: 44px;
+                                    height: 44px;
+                                    flex: 0 0 44px;
+                                }
+                                @media ($sm-1441) {
+                                    width: 40px;
+                                    height: 40px;
+                                    flex: 0 0 40px;
+                                }
+                                @media ($sm-1199) {
+                                    width: 38px;
+                                    height: 38px;
+                                    flex: 0 0 38px;
+                                }
+                                @media ($sm-991) {
+                                    width: 36px;
+                                    height: 36px;
+                                    flex: 0 0 36px;
+                                }
+                                @media ($sm-767) {
+                                    width: 32px;
+                                    height: 32px;
+                                    flex: 0 0 32px;
+                                }
+                                span{
+                                    color:#fff;
+                                    font-size: 14px; 
+                                    font-weight: 500;
+                                    line-height: 1;
+                                    @media ($sm-991) {font-size: 12px;}
+                                }
+                                &.blue {
+                                    background-color: #87CEFA; // LightSkyBlue
+                                  }
+                                  &.green {
+                                    background-color: #90EE90; // LightGreen
+                                  }
+                                  &.pink {
+                                    background-color: #FFB6C1; // LightPink
+                                  }
+                                  &.purple {
+                                    background-color: #DDA0DD; // Plum
+                                  }
+                                  &.orange {
+                                    background-color: #FFA07A; // LightSalmon
+                                  }
+                                  &.yellow {
+                                    background-color: #FFD700; // Gold
+                                  }
+                                  &.teal {
+                                    background-color: #00CED1; // DarkTurquoise
+                                  }
+                                  &.coral {
+                                    background-color: #FF7F50; // Coral
+                                  }
+                            }
+
+
+
                         }
                         .prof-dtl{
                             display: flex;
                             flex-wrap: wrap;
                             flex: 1;
-                            align-items: flex-start;
+                            align-items: center;
                             .info{
                                 display: flex;
                                 flex-grow: 1;
