--- a/src/assets/scss/forms.scss
+++ b/src/assets/scss/forms.scss
@@ -262,6 +262,9 @@
     .react-time-picker__inputGroup__leadingZero{
         padding-left: 3px !important;
     }
+    .react-time-picker__inputGroup__input--hasLeadingZero{
+        margin-left: -0.9em;
+    }
 }
 
 
